+ (Core) Fixed styling of action buttons to wrap onto new lines. (Fixes #5007)

--- a/RockWeb/Themes/Rock/Styles/theme.less
+++ b/RockWeb/Themes/Rock/Styles/theme.less
@@ -592,20 +592,15 @@ textarea,
 // .panel-actions,
 .panel-body .actions:last-of-type { // unknown if .panel-body > is doing anything
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  padding: (@panel-body-padding/2) @panel-body-padding;
+  padding: ((@panel-body-padding/2) - 4px) @panel-body-padding;
   margin: -@panel-body-padding;
   margin-top: @panel-body-padding;
   border-top: 1px solid #eee;
-  //gap: 8px;
 
-  > * + * {
-    margin-right: 8px;
-    margin-left: 8px;
-  }
-
-  > * + *:last-child {
-    margin-right: 0;
+  > * {
+    margin: 4px 8px 4px 0;
   }
 }
 
